tests/errors/unbound.expect
---CODE---
1
---STDERR---
error: undefined component name: Mult
  ┌─ tests/errors/unbound.fil:4:14
  │
4 │     M := new Mult;
  │              ^^^^ unknown component

error: undefined instance name: B
  ┌─ tests/errors/unbound.fil:5:10
  │
5 │     a := B<G>(20, 30);
  │          ^ unknown instance

error: undefined invocation name: c
  ┌─ tests/errors/unbound.fil:6:11
  │
6 │     out = c.out;
  │           ^ unknown invocation

error: undefined port name: out
  ┌─ tests/errors/unbound.fil:6:5
  │
6 │     out = c.out;
  │     ^^^ unknown port

Compilation failed with 4 errors.
